--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "sass": "^1.49.7",
+    "sass-loader": "^10.1.1"
+  }
 }
